--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ title: DSC 100
 email: kshannon@ucsd.edu
 description: >- # this means to ignore newlines until "baseurl:"
   This is a course website for UCSD DSC 100: Introduction to Data Management
-# domain: ucsd-cog100.github.io
+# domain: ucsd-dsc100.github.io
 url: https://kshannon.github.io
-baseurl: /ucsd-cogs100
+baseurl: /ucsd-dsc100
 
 ###### Build settings
 # remote_theme:
