--- a/_config.yml
+++ b/_config.yml
@@ -66,13 +66,13 @@ aux_links:
   # "Template Repository": "https://www.github.com/kshannon/ucsd-cogs9"
   "UCSD Podcast": "https://podcast.ucsd.edu/"
   "Gradescope": "https://www.gradescope.com/"
-  "Piazza": "https://piazza.com/ucsd/fall2023/dsc100" 
+  "Piazza": "https://piazza.com/" 
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
 
 # Change this to choose where to pick data from
-data_folder: fa23
+data_folder: wi24
 
 # Config JTD UI elements here
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
