--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ email: kshannon@ucsd.edu
 description: >- # this means to ignore newlines until "baseurl:"
   This is a course website for UCSD DSC 100: Introduction to Data Management
 # domain: ucsd-dsc100.github.io
-url: https://kshannon.github.io
-baseurl: /ucsd-dsc100
+url: https://kshannon-ucsd.github.io
+baseurl: /dsc100
 
 ###### Build settings
 # remote_theme:
