update TA information

--- a/_data/wi24/variables.yml
+++ b/_data/wi24/variables.yml
@@ -13,8 +13,8 @@ instructor:
       location: CSB 255
 
 teaching_assistants:
-  - name: 
-    email: 
+  - name: Hemil Panchiwala
+    email: hpanchiwala@ucsd.edu
     office_hours:
       - day: 
         time: 
