Kaveya info updated

--- a/_data/wi24/variables.yml
+++ b/_data/wi24/variables.yml
@@ -21,8 +21,8 @@ teaching_assistants:
         location: 
         zoom_link: 
         zoom_pw:
-  - name: 
-    email: 
+  - name: Kaveya Sivaprakasam
+    email: klnu@ucsd.edu
     office_hours:
       - day: 
         time: 
