changes ... of life!

--- a/_data/wi24/variables.yml
+++ b/_data/wi24/variables.yml
@@ -48,6 +48,6 @@ discussion_sections:
     day: Fri
     time: 5:00PM - 5:50PM
     location: PCYNH 106
-    ta: TBD
+    ta: Kaveya Sivaprakasam
     ia: 
     materials: 
