--- a/_data/wi24/variables.yml
+++ b/_data/wi24/variables.yml
@@ -10,7 +10,7 @@ instructor:
   office_hours:
     - day: Tue
       time: 2:30PM - 3:30PM
-      location: CSB 255
+      location: HDSI 226
 
 teaching_assistants:
   - name: Hemil Panchiwala
