--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -1,3 +1,22 @@
+- week: 0
+  title: "Week 0 - Welcome, Welcome, Welcome<br>"
+  days:
+    - date: "2024-09-26"
+      in_class: true
+  events:
+    - label: MISC
+      type: survey
+      title: Sign Up for EdStem (class discussion board)
+      # url: https://edstem.org/us/join/EU8se2
+    - label: LEC 1
+      type: lecture
+      title: 01_welcome_welcome_welcome
+      url: https://s3.us-west-2.amazonaws.com/ucsd.dsc100/lectures/Lecture+1_+Introduction+and+Overview.pdf
+    - label: DEMO 1
+      type: demo
+      title: 01_up_and_running_sqlite
+      blank: https://s3.us-west-2.amazonaws.com/ucsd.dsc100/demos/1_up_and_running_sqlite.pdf
+
 - week: 1
   title: "Week 1 - Modeling, Loss Functions, & Simple Linear Regression<br>
     <small>
@@ -76,6 +95,7 @@
         - label: NOCLS
           type: disc
           title: 🇺🇸🦅📜🔔 Happy 4th of July!
+
 
 - week: 2
   title: "Week 2 - Linear Algebra & Linear Regression<br>
@@ -285,6 +305,7 @@
           type: demo
           title: Demo 3
           # code: https://colab.research.google.com/drive/1jIhlWNmBwXjb5_Hr9PqjPBGCg0bSRyGG?usp=sharing
+
 
 - week: 5
   title: "Week 5 - Conditional Independence and Naïve Bayes<br>
