--- a/_data/fa24/calendar.yml
+++ b/_data/fa24/calendar.yml
@@ -7,7 +7,7 @@
         - label: MISC
           type: survey
           title: Sign Up for EdStem (class discussion board)
-          # url: https://edstem.org/us/join/EU8se2
+          url: https://edstem.org/us/join/YjDH7q
         - label: LEC 1
           type: lecture
           title: 01_welcome_welcome_welcome
