--- a/_data/fa24/staff.yml
+++ b/_data/fa24/staff.yml
@@ -8,7 +8,7 @@
   askabout: Coffee, Likely to be found on a tennis court 🎾
   food: Regent's Pizza, Charminar, Sochi Sushi, Turmeric Thai, Callie
 
-- name: Vignesh Palaniapan (Viggy) 
+- name: Vignesh (Viggy) Palaniapan - TA
   email: vpalaniappan@ucsd.edu
   role: TA
   photo: https://ucsd.s3.us-west-2.amazonaws.com/staff/photos/viggy.png
@@ -17,7 +17,7 @@
   askabout: Many sports (Tennis, Badminton, Frisbee currently), Foreign lang. Netflix
   food: Thai (Lanna Thai), Mexican (La Puerta), Ice Cream (SaltnStraw)
 
-- name: Abdullah Ashfaq
+- name: Abdullah Ashfaq - TA
   email: aashfaq@ucsd.edu
   role: TA 
   photo: https://ucsd.s3.us-west-2.amazonaws.com/staff/photos/abdullah.png
@@ -26,7 +26,7 @@
   askabout: Something
   food: Some food XD
 
-- name: Owen Miller
+- name: Owen Miller - Tutor
   email: omiller@ucsd.edu
   role: Tutor
   photo: https://ucsd.s3.us-west-2.amazonaws.com/staff/photos/owen.png
@@ -35,7 +35,7 @@
   askabout: Cooking, books
   food: Piacere Mio, Flavors of East Africa, Lanzhou Noodlelicious
 
-- name: Jiesen (just Jiesen, like Madonna)
+- name: Jiesen (just Jiesen, like Madonna) - Tutor
   email: jiz147@ucsd.edu
   role: Tutor
   photo: https://ucsd.s3.us-west-2.amazonaws.com/staff/photos/Jiesen.jpg
@@ -44,7 +44,7 @@
   askabout: Collecting records, playing guitar & bass; most likely to find me at Folk Arts Rare Records and Pitbull Audio (not sponsored) 
   food: Taco El Gordo, Fire Spot BBQ, Dim Sum places
 
-- name: Ahmed Mostafa
+- name: Ahmed Mostafa - Tutor
   email: ahmostafa@ucsd.edu
   role: Tutor
   photo: https://ucsd.s3.us-west-2.amazonaws.com/staff/photos/ahmed.png
